--- a/xdialog/index.html
+++ b/xdialog/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Dialogs</title>
+    <title>xdialog: Javascript Dialogs</title>
     <link rel="stylesheet" href="lib/highlight/default.min.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="xdialog/xdialog.css" />
@@ -14,7 +14,7 @@
 <body>
     <div class="xd-container">
         <header>
-            <h1 class="title-text">A Javascript Dialog Library: xdialog
+            <h1 class="title-text">A Simple Javascript Dialog Library: xdialog
                 <span>Based on <a href="https://tympanus.net/Development/ModalWindowEffects/">ModalWindowEffects</a></span>
             </h1>
         </header>
