--- a/xdialog/index.html
+++ b/xdialog/index.html
@@ -14,38 +14,44 @@
 <body>
     <div class="xd-container">
         <header>
-            <h1 class="title-text">A Simple Javascript Dialog Library: xdialog
-                <span>Based on <a href="https://tympanus.net/Development/ModalWindowEffects/">ModalWindowEffects</a></span>
-            </h1>
+            <h1 class="title-text">A Simple Javascript Dialog Library: xdialog</h1>
+            <div class="links">
+                <a class="hover-shadow" aria-label="view xdialog on github" title="view xdialog on github" href="https://github.com/xxjapp/xdialog">
+                    <i class="fab fa-github"></i>github
+                </a>
+                <a class="hover-shadow" aria-label="download xdialog" title="download xdialog" href="https://github.com/xxjapp/xdialog/releases">
+                    <i class="fas fa-cloud-download-alt"></i>download
+                </a>
+            </div>
         </header>
         <div class="main">
-            <div class="section title-text">View Effects</div>
-            <div>
-                <button class="xd-trigger" data-effect="">No Effect</button>
-                <button class="xd-trigger" data-effect="fade_in_and_scale">Fade in & Scale</button>
-                <button class="xd-trigger" data-effect="slide_in_right">Slide in (right)</button>
-                <button class="xd-trigger" data-effect="slide_in_bottom">Slide in (bottom)</button>
-                <button class="xd-trigger" data-effect="newspaper">Newspaper</button>
-                <button class="xd-trigger" data-effect="fall">Fall</button>
-                <button class="xd-trigger" data-effect="side_fall">Side Fall</button>
-                <button class="xd-trigger" data-effect="sticky_up">Sticky Up</button>
-                <button class="xd-trigger" data-effect="3d_flip_horizontal">3D Flip (horizontal)</button>
-                <button class="xd-trigger" data-effect="3d_flip_vertical">3D Flip (vertical)</button>
-                <button class="xd-trigger" data-effect="3d_sign">3D Sign</button>
-                <button class="xd-trigger" data-effect="super_scaled">Super Scaled</button>
-                <button class="xd-trigger" data-effect="just_me">Just Me</button>
-                <button class="xd-trigger" data-effect="3d_slit">3D Slit</button>
-                <button class="xd-trigger" data-effect="3d_rotate_bottom">3D Rotate Bottom</button>
-                <button class="xd-trigger" data-effect="3d_rotate_in_left">3D Rotate In Left</button>
-                <button class="xd-trigger" data-effect="blur">Blur (no IE)</button>
-                <button class="xd-trigger" data-effect="let_me_in">Let me in</button>
-                <button class="xd-trigger" data-effect="make_way">Make way!</button>
-                <button class="xd-trigger" data-effect="slip_from_top">Slip from top</button>
-            </div>
             <div class="section title-text">View Demo</div>
             <div>
-                <button id="button-demo">View demo login dialog</button>
-                <button id="button-demo-source">View demo login dialog source</button>
+                <button class="hover-shadow" id="button-demo">View demo login dialog</button>
+                <button class="hover-shadow" id="button-demo-source">View demo login dialog source</button>
+            </div>
+            <div class="section title-text">View Effects</div>
+            <div>
+                <button class="xd-trigger hover-shadow" data-effect="">No Effect</button>
+                <button class="xd-trigger hover-shadow" data-effect="fade_in_and_scale">Fade in & Scale</button>
+                <button class="xd-trigger hover-shadow" data-effect="slide_in_right">Slide in (right)</button>
+                <button class="xd-trigger hover-shadow" data-effect="slide_in_bottom">Slide in (bottom)</button>
+                <button class="xd-trigger hover-shadow" data-effect="newspaper">Newspaper</button>
+                <button class="xd-trigger hover-shadow" data-effect="fall">Fall</button>
+                <button class="xd-trigger hover-shadow" data-effect="side_fall">Side Fall</button>
+                <button class="xd-trigger hover-shadow" data-effect="sticky_up">Sticky Up</button>
+                <button class="xd-trigger hover-shadow" data-effect="3d_flip_horizontal">3D Flip (horizontal)</button>
+                <button class="xd-trigger hover-shadow" data-effect="3d_flip_vertical">3D Flip (vertical)</button>
+                <button class="xd-trigger hover-shadow" data-effect="3d_sign">3D Sign</button>
+                <button class="xd-trigger hover-shadow" data-effect="super_scaled">Super Scaled</button>
+                <button class="xd-trigger hover-shadow" data-effect="just_me">Just Me</button>
+                <button class="xd-trigger hover-shadow" data-effect="3d_slit">3D Slit</button>
+                <button class="xd-trigger hover-shadow" data-effect="3d_rotate_bottom">3D Rotate Bottom</button>
+                <button class="xd-trigger hover-shadow" data-effect="3d_rotate_in_left">3D Rotate In Left</button>
+                <button class="xd-trigger hover-shadow" data-effect="blur">Blur (no IE)</button>
+                <button class="xd-trigger hover-shadow" data-effect="let_me_in">Let me in</button>
+                <button class="xd-trigger hover-shadow" data-effect="make_way">Make way!</button>
+                <button class="xd-trigger hover-shadow" data-effect="slip_from_top">Slip from top</button>
             </div>
         </div>
     </div>
@@ -53,6 +59,7 @@
 
     <script src="lib/highlight/highlight.min.js"></script>
     <script src="lib/clipboard/clipboard.min.js"></script>
+    <script src="lib/fontawesome/all.min.js"></script>
     <script src="xdialog/xdialog.js"></script>
     <script src="js/index.js"></script>
 </body>
