--- a/xdialog/index.html
+++ b/xdialog/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>xdialog: Javascript Dialogs</title>
+    <link rel="shortcut icon" href="images/d.ico" type="image/x-icon">
     <link rel="stylesheet" href="lib/highlight/default.min.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="xdialog/xdialog.css" />
@@ -52,6 +53,10 @@
                 <button class="xd-trigger hover-shadow" data-effect="let_me_in">Let me in</button>
                 <button class="xd-trigger hover-shadow" data-effect="make_way">Make way!</button>
                 <button class="xd-trigger hover-shadow" data-effect="slip_from_top">Slip from top</button>
+            </div>
+            <div class="section title-text">Spin Utility</div>
+            <div>
+                <button class="hover-shadow" id="button-spin">Start spin</button>
             </div>
         </div>
     </div>
