--- a/xdialog/index.html
+++ b/xdialog/index.html
@@ -35,6 +35,10 @@
                 <button data-method="openDialogDemo2" class="hover-shadow button-demo">View demo 2 - dialog with iframe</button>
                 <button data-method="openDialogDemo2" class="hover-shadow button-demo-source">View demo 2 - dialog with iframe source</button>
             </div>
+            <div>
+                <button data-method="openDialogDemo3" class="hover-shadow button-demo">View demo 3 - callback parameter</button>
+                <button data-method="openDialogDemo3" class="hover-shadow button-demo-source">View demo 3 - callback parameter source</button>
+            </div>
             <div class="section title-text">View Effects</div>
             <div>
                 <button class="xd-trigger hover-shadow" data-effect="">No Effect</button>
