--- a/xdialog/index.html
+++ b/xdialog/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="section title-text">Spin Utility</div>
             <div>
-                <button class="hover-shadow" id="button-spin">Start spin</button>
+                <button class="hover-shadow" id="button-spin">Start & stop spin</button>
             </div>
         </div>
     </div>
