remove copied xdialog files

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <script>
-        window.location.href = 'xdialog/';
-    </script>
+    <p>Hello world!</p>
 </body>
 
 </html>
